--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@
   } */
 
   /* transition shorthand */
-  div {
+  /* div {
     width: 100px;
     height: 100px;
     background: red;
@@ -93,4 +93,54 @@
   
   div:hover {
     width: 300px;
+  } */
+  /* animation */
+  /* div {
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    animation-name: example;
+    animation-duration: 4s;
+  }
+  
+  @keyframes example {
+    from {background-color: red;}
+    to {background-color: yellow;}
+  } */
+
+  /* div {
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    animation-name: example;
+    animation-duration: 4s;
+  }
+  
+  @keyframes example {
+    0%   {background-color: red;
+        width: 150px;
+    }
+    25%  {background-color: yellow;width: 200px;}
+    50%  {background-color: blue;width: 180px;}
+    100% {background-color: green;width: 350px;}
+  } */
+
+  div {
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    position: relative;
+    animation-name: example;
+    animation-duration: 4s;
+    animation-delay: -2s;
+    animation-iteration-count: 5;
+    animation-direction:reverse ;
+  }
+  
+  @keyframes example {
+    0%   {background-color:red; left:0px; top:0px;}
+    25%  {background-color:yellow; left:200px; top:0px;}
+    50%  {background-color:blue; left:200px; top:200px;}
+    75%  {background-color:green; left:0px; top:200px;}
+    100% {background-color:red; left:0px; top:0px;}
   }
